--- a/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
+++ b/src/app/Ui/Modules/reportes/components/design-reporte/design-page/desing-page-tabla-ajustados/desing-page-tabla-ajustados.component.html
@@ -5,15 +5,16 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigoproducto">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>codigoproducto</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">  {{ row.codigoproducto }}
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
+          <span class="text-sm text-gray-600 dark:text-neutral-400">
+            {{ row.codigoproducto }}
           </span>
         </button>
       </td>
@@ -24,14 +25,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="codigobarra">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>codigobarra</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center" [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.codigobarra }}
           </span>
@@ -46,14 +47,14 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         descripcionProducto
       </th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.descripcionProducto }}
           </span>
@@ -66,14 +67,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="unidad">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>unidad</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center" [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          'bg-slate-50e text-white': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            'bg-slate-50e text-white': row.esnuevo == 1
+          }"
+        >
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.unidad }}
           </span>
@@ -86,14 +87,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockL">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockL</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.stockL }}
           </span>
@@ -106,14 +107,14 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockF">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockF</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
           <span class="text-sm text-gray-600 dark:text-neutral-400">
             {{ row.stockF }}
           </span>
@@ -126,23 +127,23 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="stockresultante">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>stockresultante</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
           <span
-            class="text-sm text-gray-600 "
+            class="text-sm text-gray-600"
             [ngClass]="{
           ' text-red-600': row.stockF - row.stockL + row.ajuste  < 0,
           ' text-blue-700': row.stockF - row.stockL + row.ajuste  > 0,
           ' text-gray-600': row.stockF - row.stockL + row.ajuste  == 0,
         }"
           >
-          {{ row.stockF - row.stockL + row.ajuste }}
+            {{ row.stockF - row.stockL + row.ajuste }}
           </span>
         </button>
       </td>
@@ -153,180 +154,40 @@
     <!-- =================================================================================== -->
     <ng-container matColumnDef="ajuste">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Ajuste</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+      <td mat-cell *matCellDef="let row">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+          [ngClass]="{
+            'bg-white text-white': row.esnuevo == 0,
+            '': row.esnuevo == 1
+          }"
+        >
           <span
-            class="text-sm text-gray-600 "
+            class="text-sm text-gray-600"
             [ngClass]="{
           ' text-red-600': row.ajuste < 0,
           ' text-blue-700': row.ajuste > 0,
           ' text-gray-600': row.ajuste == 0,
         }"
           >
-          {{ row.ajuste }}
+            {{ row.ajuste }}
           </span>
         </button>
       </td>
     </ng-container>
 
-    <!-- =================================================================================== -->
-    <!-- Almacén -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="almacen">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Almacén</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.almacen }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
 
     <!-- =================================================================================== -->
-    <!-- Sucursal -->
+    <!-- DESCRIPCIÓN -->
     <!-- =================================================================================== -->
-    <ng-container matColumnDef="sucursal">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Sucursal</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center" [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.sucursal }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Zona -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="zona">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Zona</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center" [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.zona }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- Pasillo -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="pasillo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pasillo</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.pasillo }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- rack -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="rack">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rack</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.rack }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- ubicacion -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="ubicacion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center" [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.ubicacion }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- esagrupado -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="esagrupado">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>esagrupado</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-      >
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
-          <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.esagrupado }}
-          </span>
-        </button>
-      </td>
-    </ng-container>
-
-    <!-- =================================================================================== -->
-    <!-- codigogrupo -->
-    <!-- =================================================================================== -->
-    <ng-container matColumnDef="codigogrupo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>codigogrupo</th>
+    <ng-container matColumnDef="descripcionajuste">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Descripción ajuste</th>
       <td mat-cell *matCellDef="let row">
-        <button class="px-6 py-3 flex gap-2 align-center"  [ngClass]="{
-          'bg-white text-white': row.esnuevo == 0,
-          '': row.esnuevo == 1
-        }">
+        <button
+          class="px-6 py-3 flex gap-2 align-center"
+        >
           <span class="text-sm text-gray-600 dark:text-neutral-400">
-            {{ row.codigogrupo }}
+            {{ row.descripcionajuste }}
           </span>
         </button>
       </td>
@@ -340,10 +201,10 @@
   <!-- PAGINACIÓN INVENTARIO -->
   <!-- =================================================================================== -->
   <!-- <mat-paginator [pageSizeOptions]="[100]" aria-label="Select page of users" /> -->
-   <mat-paginator
-                [pageSizeOptions]="[100]"
-                showFirstLastButtons
-                aria-label="Select page of periodic elements"
-              >
-              </mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[100]"
+    showFirstLastButtons
+    aria-label="Select page of periodic elements"
+  >
+  </mat-paginator>
 </div>
