--- a/src/app/Ui/Modules/configuration/Empresas/page/empresa-page/empresa-page.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/page/empresa-page/empresa-page.component.html
@@ -20,10 +20,10 @@
       <div class="md:block">
         <div class="relative">
 
-          <!-- <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" data-bs-toggle="modal" data-bs-target="#modalRegistroUsuario">
+          <button type="button" class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-transparent bg-blue-600 text-white hover:bg-blue-700 focus:outline-none focus:bg-blue-700 disabled:opacity-50 disabled:pointer-events-none" data-bs-toggle="modal" data-bs-target="#modalRegistoEmpresas">
             <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M5 12h14"/><path d="M12 5v14"/></svg>
             Nuevo
-          </button> -->
+          </button>
         </div>
       </div>
 
