--- a/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.html
+++ b/src/app/Ui/Modules/reportes/components/filtros-checkbox-tabla/filtros-checkbox-tabla.component.html
@@ -4,46 +4,72 @@
     (click)="mostrarFiltros = !mostrarFiltros"
     class="fixed top-1/2 left-0 transform -translate-y-1/2 bg-gray-900 text-white p-2 rounded-r-full shadow-lg hover:bg-gray-700 transition z-50"
   >
-    <span [class.rotate-180]="mostrarFiltros" class="transition-transform duration-300"><mat-icon>chevron_right</mat-icon>
+    <span
+      [class.rotate-180]="mostrarFiltros"
+      class="transition-transform duration-300"
+      ><mat-icon>chevron_right</mat-icon>
     </span>
   </button>
 
   <!-- Panel de Filtros -->
   <div
-  [class.-translate-x-full]="!mostrarFiltros"
-  class="fixed left-0 top-0 h-screen w-72 bg-white/30 backdrop-blur-md shadow-lg transition-transform duration-300 p-4 border-r border-white/40 rounded-r-2xl overflow-hidden z-40"
->
-  <!-- Título con botón de cierre -->
-  <div class="flex items-center  justify-between mb-2">
-    <h3 class="text-lg font-semibold text-gray-800 mb-0">Seleccionar Columnas</h3>
-    <button (click)="mostrarFiltros = false" class="text-gray-500 hover:text-red-500 transition text-sm">
-      ✖
-    </button>
-  </div>
+    [class.-translate-x-full]="!mostrarFiltros"
+    class="fixed left-0 top-0 h-screen w-72 bg-white/30 backdrop-blur-md shadow-lg transition-transform duration-300 p-4 border-r border-white/40 rounded-r-2xl overflow-hidden z-40"
+  >
+    <!-- Título con botón de cierre -->
+    <div class="flex items-center justify-between mb-2">
+      <h3 class="text-lg font-semibold text-gray-800 mb-0">
+        Seleccionar Columnas
+      </h3>
+      <button
+        (click)="mostrarFiltros = false"
+        class="text-gray-500 hover:text-red-500 transition text-sm"
+      >
+        ✖
+      </button>
+    </div>
 
-  <!-- Contenedor con scroll si es necesario -->
-  <div class="h-[calc(100vh-60px)] overflow-y-auto pr-1 scrollbar-thin scrollbar-thumb-gray-300 scrollbar-track-gray-100">
-    <ul class="flex flex-col space-y-1">
-      <!-- Checkbox para seleccionar todas -->
-      <li class="flex items-center space-x-2 py-1 px-2 bg-gray-200 rounded-md hover:bg-gray-200 transition shadow-sm">
-        <input id="todos" type="checkbox" [checked]="todasSeleccionadas" (change)="toggleTodasLasColumnas()" class="w-4 h-4 accent-gray-800" />
-        <label for="todos" class="text-gray-900 text-sm font-medium cursor-pointer">Todos</label>
-      </li>
-
-      <!-- Campos dinámicos -->
-      @for (columna of columnas; track $index) {
-        <li class="flex items-center space-x-2 py-1 px-2 bg-gray-200 rounded-md hover:bg-gray-200 transition shadow-sm">
-          <input type="checkbox" [id]="columna.id" [checked]="columna.visible" (change)="toggleColumna(columna.id, $event)" class="w-4 h-4 accent-gray-800" />
-          <label  class="text-gray-900 text-sm font-medium cursor-pointer">{{ columna.titulo }}</label>
+    <!-- Contenedor con scroll si es necesario -->
+    <div
+      class="h-[calc(100vh-60px)] overflow-y-auto pr-1 scrollbar-thin scrollbar-thumb-gray-300 scrollbar-track-gray-100"
+    >
+      <ul class="flex flex-col space-y-1">
+        <!-- Checkbox para seleccionar todas -->
+        <li
+          class="flex items-center space-x-2 py-1 px-2 bg-gray-200 rounded-md hover:bg-gray-200 transition shadow-sm"
+        >
+          <input
+            id="todos"
+            type="checkbox"
+            [checked]="todasSeleccionadas"
+            (change)="toggleTodasLasColumnas()"
+            class="w-4 h-4 accent-gray-800"
+          />
+          <label
+            for="todos"
+            class="text-gray-900 text-sm font-medium cursor-pointer"
+            >Todos</label
+          >
         </li>
-      }
-    </ul>
+
+        <!-- Campos dinámicos -->
+        @for (columna of columnas; track $index) {
+        <li
+          class="flex items-center space-x-2 py-1 px-2 bg-gray-200 rounded-md hover:bg-gray-200 transition shadow-sm"
+        >
+          <input
+            type="checkbox"
+            [id]="columna.id"
+            [checked]="columna.visible"
+            (change)="toggleColumna(columna.id, $event)"
+            class="w-4 h-4 accent-gray-800"
+          />
+          <label class="text-gray-900 text-sm font-medium cursor-pointer">{{
+            columna.titulo
+          }}</label>
+        </li>
+        }
+      </ul>
+    </div>
   </div>
 </div>
-
-</div>
-
-
-
-
-
