--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -59,8 +59,12 @@
                   class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
                 >
                   <div class="mat-elevation-z8">
-                    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
-
+                    <table
+                      mat-table
+                      [dataSource]="dataSource"
+                      matSort
+                      (matSortChange)="announceSortChange($event)"
+                    >
                       <!-- =================================================================================== -->
                       <!-- Fecha inventariado -->
                       <!-- =================================================================================== -->
@@ -72,9 +76,7 @@
                           <button
                             class="fecharegistro px-1 py-3 flex gap-2 align-center"
                           >
-                            <span
-                              class="text-sm text-gray-600 "
-                            >
+                            <span class="text-sm text-gray-600">
                               {{
                                 row.fechacreacion
                                   ? (row.fechacreacion | date : "dd/MM/yyyy")
@@ -96,12 +98,11 @@
                           <button
                             class="fecharegistro px-1 py-3 flex gap-2 align-center"
                           >
-                            <span
-                              class="text-sm text-gray-600 "
-                            >
+                            <span class="text-sm text-gray-600">
                               {{
                                 row.fechamodificacion
-                                  ? (row.fechamodificacion | date : "dd/MM/yyyy")
+                                  ? (row.fechamodificacion
+                                    | date : "dd/MM/yyyy")
                                   : "-"
                               }}
                             </span>
@@ -117,12 +118,12 @@
                           Descripción
                         </th>
                         <td mat-cell *matCellDef="let row">
-
-                          <button class="px-6 py-3  flex gap-2 text-left" type="button" >
+                          <button
+                            class="px-6 py-3 flex gap-2 text-left"
+                            type="button"
+                          >
                             <!-- data-bs-toggle="offcanvas" data-bs-target="#detalledashboard" aria-controls="staticBackdrop"-->
-                            <span
-                              class="text-sm text-gray-600 text-left"
-                            >
+                            <span class="text-sm text-gray-600 text-left">
                               {{
                                 row.descripcion.toUpperCase() ||
                                   "- sin nombre -"
@@ -142,12 +143,11 @@
                         <td mat-cell *matCellDef="let row">
                           <div class="flex justify-end">
                             <span
-                            class="py-1 text-sm inline-flex items-center gap-x-1  font-medium  text-gray-600 rounded-full"
-                          >
-                          {{ row.totalregistros || "-" }}
-                          </span>
+                              class="py-1 text-sm inline-flex items-center gap-x-1 font-medium text-gray-600 rounded-full"
+                            >
+                              {{ row.totalregistros || "-" }}
+                            </span>
                           </div>
-
                         </td>
                       </ng-container>
 
@@ -163,10 +163,7 @@
                             class="usuariocreador"
                             class="px-6 py-3 flex gap-2 align-center"
                           >
-
-                            <span
-                              class="text-sm text-gray-600 "
-                            >
+                            <span class="text-sm text-gray-600">
                               {{ row.UsuarioAsignado.toUpperCase() }}
                             </span>
                           </button>
@@ -195,9 +192,7 @@
                       <!-- Detalle -->
                       <!-- =================================================================================== -->
                       <ng-container matColumnDef="opciones">
-                        <th mat-header-cell *matHeaderCellDef>
-                          Detalle
-                        </th>
+                        <th mat-header-cell *matHeaderCellDef></th>
                         <td mat-cell *matCellDef="let row">
                           <div class="px-1 py-3">
                             <button
@@ -207,16 +202,17 @@
                                   row.idcarga
                                 )
                               "
-                              class=" detalle btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
+                              class="detalle btn py-2 px-3 inline-flex items-center gap-x-2 text-xs rounded-lg bg-white text-gray-800 hover:shadow-sm hover:bg-gray-50 focus:outline-none focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none"
                               type="button"
                               data-bs-toggle="offcanvas"
                               data-bs-target="#disenoreporte"
                               aria-controls="offcanvasRight"
                             >
                               <mat-icon class="icon-color-descargar"
-                                >visibility</mat-icon
-                              >
+                                >visibility
+                              </mat-icon>
                             </button>
+
                           </div>
                         </td>
                       </ng-container>
@@ -265,7 +261,5 @@
   [citaSeleccionada]="InventarioSeleccionado"
   [detalleProductos]="listaProductos"
   [cantidadInventarios]="cantidadListaProductos"
-
 />
 
-<dashboard-detalle-reporteinventario />
