--- a/src/app/Ui/Shared/Components/organisms/sidebar/sidebar.component.html
+++ b/src/app/Ui/Shared/Components/organisms/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
 <div id="hs-application-sidebar" class="bg-filtros-tabla-inventarios hs-overlay  [--auto-close:lg]
   hs-overlay-open:translate-x-0
   -translate-x-full transition-all duration-300 transform
-  w-[220px] h-full
+  w-[240px] h-full
   hidden
   fixed inset-y-0 start-0 z-[60]
   bg-white border-e border-gray-200
@@ -18,10 +18,11 @@
 
     <div class="h-full overflow-y-auto [&::-webkit-scrollbar]:w-2 [&::-webkit-scrollbar-thumb]:rounded-full [&::-webkit-scrollbar-track]:bg-gray-100 [&::-webkit-scrollbar-thumb]:bg-gray-300 dark:[&::-webkit-scrollbar-track]:bg-neutral-700 dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500">
       <nav class="hs-accordion-group p-3 w-full flex flex-col flex-wrap" data-hs-accordion-always-open aria-label="nav">
-        <h4 class="flex justify-between items-center gap-x-3.5 py-2 px-2.5  text-sm text-[#00D1AE]  rounded-lg ">Menu</h4>
+        <h4 class="flex justify-between items-center gap-x-3.5 py-2 px-2.5  text-sm text-[#00D1AE]  rounded-lg ">Menu <span>v 1.2</span></h4>
         <ul class="flex flex-col space-y-1 pl-0">
           <menu-opciones />
         </ul>
+
       </nav>
     </div>
   </div>
