--- a/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.css
+++ b/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.css
@@ -1,7 +1,7 @@
 .bg-fondo-login {
   width: 100%;
-  background-image: url("../../../../../../assets/images/bg_fondo.webp");
-  /* background-image: url("/db-inventory-gestor/browser/assets/images/bg_fondo.webp"); */
+  /* background-image: url("../../../../../../assets/images/bg_fondo.webp"); */
+  background-image: url("/db-inventory-gestor/browser/assets/images/bg_fondo.webp");
   object-fit: contain;
   background-position: center;
   background-size: cover;
