--- a/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.html
@@ -1,5 +1,5 @@
-<img src="../../../../../../assets/svg/icon-logo-DbInventory.svg" alt="" />
-<!-- <img src="/db-inventory-gestor/browser/assets/svg/icon-logo-DbInventory.svg" alt="" /> -->
+<!-- <img src="../../../../../../assets/svg/icon-logo-DbInventory.svg" alt="" /> -->
+<img src="/db-inventory-gestor/browser/assets/svg/icon-logo-DbInventory.svg" alt="" />
 
 <h2 class="text-4xl p-2 text-gray-100 text-left">
   Haz tus
