--- a/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.html
+++ b/src/app/Ui/Modules/login/components/apartado-izquierdo/apartado-izquierdo.component.html
@@ -1,14 +1,58 @@
-<img src="../../../../../../assets/svg/icon-logo-DbInventory.svg" alt="" />
-<!-- <img src="/db-inventory-gestor/browser/assets/svg/icon-logo-DbInventory.svg" alt="" /> -->
+<svg
+  width="200"
+  height="100"
+  viewBox="0 0 200 100"
+  xmlns="http://www.w3.org/2000/svg"
+>
+  <rect width="100%" height="100%" fill="transparent" />
 
-<h2 class="text-4xl p-2 text-gray-100 text-left">
+  <!-- Texto "db" -->
+  <text
+    x="10"
+    y="40"
+    font-family="Arial, sans-serif"
+    font-size="35"
+    font-weight="bold"
+    fill="white"
+  >
+    db
+  </text>
+
+  <!-- Guion o subrayado turquesa -->
+  <rect x="60" y="35" width="35" height="8" fill="#00D4B1" />
+
+  <text
+    x="150"
+    y="40"
+    font-family="Arial, sans-serif"
+    font-size="15"
+    font-weight="bold"
+    fill="#00D4B1"
+  >
+    v1.3
+  </text>
+
+  <!-- Texto "Inventory" -->
+  <text
+    x="10"
+    y="70"
+    font-family="Arial, sans-serif"
+    font-size="35"
+    font-weight="bold"
+    fill="white"
+  >
+    Inventory
+  </text>
+</svg>
+
+<h2 class="text-4xl p-2 mb-0 text-gray-100 text-left">
   Haz tus
   <span class="text-decoration">
-    <span class="rslt-text">inventarios</span>
+    inventarios
   </span>
   más dinámicos y flexibles
 </h2>
-<p class="text-white mt-4">
+<p class="text-white mt-2 mb-0">
   Adapta tu Estrategia Logística a los nuevos retos digitales​
 </p>
 <button
